@@ -1,6 +1,5 @@
-# $Id: DISABLED,v 1.31 2008-09-22 23:12:10 bagder Exp $
+# $Id: DISABLED,v 1.32 2008-10-07 23:15:03 danf Exp $
 # This file can be used to specify test cases that should not run when all
 # test cases are run by runtests.pl. Just add the plain test case numbers, one
 # per line.
 # Lines starting with '#' letters are treated as comments.
-160
